[gd_scene load_steps=5 format=3 uid="uid://cx8r0s0ubpy5l"]

[ext_resource type="Script" uid="uid://k4q1onv15cjr" path="res://player/Player.gd" id="1_a5lo2"]
[ext_resource type="PackedScene" uid="uid://bd6aqigah8e1u" path="res://player/soda_zachary.tscn" id="2_a5lo2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a5lo2"]
radius = 0.2
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_a5lo2"]
size = Vector3(0.5, 1.5, 0.6)

[node name="Player" type="CharacterBody3D"]
floor_max_angle = 1.3089969
script = ExtResource("1_a5lo2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_a5lo2")

[node name="Pivot" type="Node3D" parent="."]

[node name="Direction" type="Marker3D" parent="Pivot"]

[node name="ActionableFinder" type="Area3D" parent="Pivot/Direction"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/Direction/ActionableFinder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.09909403)
shape = SubResource("BoxShape3D_a5lo2")

[node name="sodaZachary" parent="Pivot" instance=ExtResource("2_a5lo2")]

[node name="Skeleton3D" parent="Pivot/sodaZachary/rig" index="0"]
bones/8/position = Vector3(0.18869057, 0.09116925, 1.1243964)
bones/8/rotation = Quaternion(-0.048945762, 0.8451791, -0.06695019, 0.5280097)
bones/8/scale = Vector3(0.99999994, 16.823477, 0.9999998)
bones/9/position = Vector3(-0.19448227, 0.092038214, 1.1288396)
bones/9/rotation = Quaternion(0.023729626, 0.87152207, -0.062760234, -0.48574415)
bones/9/scale = Vector3(0.9999999, 16.345922, 1)
bones/35/rotation = Quaternion(-1.6674379e-07, 0.035006065, -7.6096873e-10, 0.99938715)
bones/49/rotation = Quaternion(-1.8676991e-07, -0.035006054, -7.797159e-09, 0.99938715)
bones/116/rotation = Quaternion(-0.32357922, 0.74595886, -0.516285, 0.2688711)
bones/116/scale = Vector3(1.0081531, 1.0081539, 1.0081532)
bones/117/rotation = Quaternion(0.06104075, -4.878378e-08, 6.294342e-08, 0.9981354)
bones/117/scale = Vector3(0.9997668, 0.9997667, 0.99976665)
bones/118/rotation = Quaternion(-0.039602727, -0.22538784, 0.09883383, 0.96843374)
bones/118/scale = Vector3(0.992144, 0.9921434, 0.9921438)
bones/121/scale = Vector3(0.99214417, 0.99214363, 0.9921443)
bones/122/position = Vector3(-2.4214065e-08, 2.0815057e-07, -3.9115616e-08)
bones/123/position = Vector3(-1.01487935e-07, 0.11503989, 2.4211225e-08)
bones/123/rotation = Quaternion(-2.63982e-07, -0.113757834, 5.5104783e-07, 0.9935085)
bones/123/scale = Vector3(0.9921442, 0.99214363, 0.9921439)
bones/124/position = Vector3(-7.943093e-09, -8.428476e-08, -2.8890401e-08)
bones/125/scale = Vector3(0.9919128, 0.99191207, 0.9919126)
bones/126/position = Vector3(-8.009358e-08, 0.111377455, -6.1467375e-08)
bones/126/rotation = Quaternion(2.70713e-07, -0.1616997, 1.17222086e-07, 0.98684)
bones/126/scale = Vector3(0.9919131, 0.9919121, 0.99191266)
bones/135/rotation = Quaternion(0.07960711, -0.76699585, 0.6077933, -0.18965073)
bones/136/rotation = Quaternion(-0.029858291, 0.27156222, 0.008429228, 0.9619207)
bones/136/scale = Vector3(1.0081531, 1.0081536, 1.0081532)
bones/137/rotation = Quaternion(0.061040737, -4.5407138e-08, 5.8908e-08, 0.9981354)
bones/137/scale = Vector3(0.9997668, 0.99976665, 0.99976665)
bones/138/rotation = Quaternion(-0.47130856, 0.6212926, -0.3861629, 0.4926885)
bones/140/rotation = Quaternion(-0.47130877, 0.6212922, -0.3861626, 0.492689)
bones/140/scale = Vector3(0.995948, 1.0081532, 0.9959481)
bones/141/rotation = Quaternion(1.0085647e-07, 0.1613981, -1.054465e-07, 0.9868895)
bones/142/rotation = Quaternion(0.060222466, 0.16142957, -0.009986267, 0.9849944)
bones/142/scale = Vector3(1.0001172, 0.99994844, 0.9999388)
bones/143/rotation = Quaternion(-1.3749509e-09, -0.11335055, -6.181581e-08, 0.99355507)
bones/143/scale = Vector3(0.99999976, 1.0000004, 0.9999994)
bones/144/rotation = Quaternion(-0.028269287, -0.11423021, 0.10265626, 0.98773175)
bones/144/scale = Vector3(1.0034367, 0.99267596, 1.0039388)
bones/167/rotation = Quaternion(-0.27506933, -1.1367587e-09, 0.9614244, 1.2682136e-08)
bones/177/rotation = Quaternion(0.78951067, 4.0694484e-08, 0.6137368, 2.8242248e-08)
bones/181/position = Vector3(-0.003936236, 0.035158787, 0.0074615856)
bones/181/rotation = Quaternion(0.034223862, 0.8215187, 0.035518974, 0.5680443)
bones/196/rotation = Quaternion(-0.19562685, 1.3304366e-07, 0.98067844, -5.821903e-07)
bones/200/position = Vector3(-0.007926013, 0.033852268, -0.004405392)
bones/200/rotation = Quaternion(-0.012816622, 0.80943394, 0.018378327, 0.58678335)
bones/215/rotation = Quaternion(-0.17202033, 1.593229e-07, 0.9850934, -6.586293e-07)
bones/219/position = Vector3(-0.01039703, 0.030883214, -0.016309034)
bones/219/rotation = Quaternion(-0.039987814, 0.81285864, -0.024131164, 0.5805854)
bones/234/rotation = Quaternion(-0.06741645, -1.6385863e-08, 0.99772495, -3.0497264e-07)
bones/238/position = Vector3(-0.010397088, 0.030883247, -0.016309083)
bones/238/rotation = Quaternion(-0.03998778, 0.81285864, -0.024131157, 0.5805854)
bones/240/rotation = Quaternion(-0.30231425, -0.7605425, 0.5155253, 0.25380102)
bones/240/scale = Vector3(1.0037903, 1.0037905, 1.0037903)
bones/241/rotation = Quaternion(0.07352913, -1.9160974e-07, 1.4485872e-07, 0.99729306)
bones/241/scale = Vector3(0.99965507, 0.9996555, 0.99965537)
bones/242/rotation = Quaternion(-0.06697884, 0.2320055, -0.09691777, 0.9655538)
bones/242/scale = Vector3(0.9965677, 0.99656713, 0.99656695)
bones/244/position = Vector3(-1.3969782e-08, 1.6996658e-08, -5.5879497e-09)
bones/245/scale = Vector3(0.9965679, 0.99656737, 0.99656725)
bones/246/position = Vector3(-2.9802269e-08, -3.0267998e-08, -3.3527552e-08)
bones/247/position = Vector3(1.553378e-07, 0.12165931, 1.1302362e-08)
bones/247/rotation = Quaternion(-1.224721e-07, 0.11722206, -3.8346933e-08, 0.9931058)
bones/247/scale = Vector3(0.9965678, 0.9965673, 0.9965671)
bones/248/position = Vector3(5.9296426e-09, -1.3737036e-08, -2.3755408e-08)
bones/249/scale = Vector3(0.9962243, 0.996224, 0.99622387)
bones/250/position = Vector3(8.754436e-08, 0.110292085, 8.9406974e-08)
bones/250/rotation = Quaternion(2.1813264e-08, 0.16193025, -4.2603406e-07, 0.9868022)
bones/250/scale = Vector3(0.99622446, 0.99622387, 0.9962238)
bones/259/rotation = Quaternion(-0.060567897, -0.76714885, 0.6120477, 0.18224138)
bones/260/rotation = Quaternion(-0.03703941, -0.28024796, -0.010822488, 0.9591518)
bones/260/scale = Vector3(1.0037901, 1.0037903, 1.0037906)
bones/261/rotation = Quaternion(0.07352912, -1.7977933e-07, 1.4512132e-07, 0.99729306)
bones/261/scale = Vector3(0.99965507, 0.9996555, 0.99965537)
bones/262/rotation = Quaternion(-0.4510402, -0.6397615, 0.39207488, 0.48326528)
bones/264/rotation = Quaternion(-0.45104024, -0.6397611, 0.39207464, 0.48326603)
bones/264/scale = Vector3(0.99811053, 1.0037895, 0.99811053)
bones/265/rotation = Quaternion(-3.6043364e-08, -0.16149206, -1.5850231e-08, 0.98687404)
bones/266/rotation = Quaternion(0.07254909, -0.16150868, 0.0119718425, 0.98412824)
bones/266/scale = Vector3(1.0001715, 0.9997791, 1.0000504)
bones/267/rotation = Quaternion(-2.0677854e-08, 0.1162316, 6.154717e-08, 0.9932222)
bones/267/scale = Vector3(0.99999994, 0.9999999, 0.99999994)
bones/268/rotation = Quaternion(-0.05531085, 0.118255965, -0.10401556, 0.9859702)
bones/268/scale = Vector3(1.0014759, 0.9968503, 1.0016841)
bones/270/position = Vector3(2.0980582e-09, 0.05815319, 8.0767954e-08)
bones/270/rotation = Quaternion(0.17410934, -0.10302267, 0.055573504, 0.97774434)
bones/271/rotation = Quaternion(0.077674575, 0.0004386688, -0.005628403, 0.9969628)
bones/273/position = Vector3(0.0028825349, -0.006681554, 0.02043423)
bones/273/rotation = Quaternion(0.017378839, 0.8439282, 0.26086137, -0.46843836)
bones/274/rotation = Quaternion(0.17295966, 0.0018766219, -0.010686491, 0.9848691)
bones/276/position = Vector3(2.0980582e-09, 0.05815319, 8.0767954e-08)
bones/276/rotation = Quaternion(0.17410934, -0.10302267, 0.055573504, 0.97774434)
bones/277/rotation = Quaternion(0.077674575, 0.0004386688, -0.005628403, 0.9969628)
bones/279/position = Vector3(2.1564892e-09, 0.05815318, 1.621357e-08)
bones/279/rotation = Quaternion(0.17410952, -0.10302265, 0.055573534, 0.9777442)
bones/280/position = Vector3(0.0028825349, -0.006681554, 0.02043423)
bones/280/rotation = Quaternion(0.017378839, 0.8439282, 0.26086137, -0.46843836)
bones/281/rotation = Quaternion(0.17295966, 0.0018766219, -0.010686491, 0.9848691)
bones/283/position = Vector3(0.0028825116, -0.006681623, 0.020434218)
bones/283/rotation = Quaternion(0.017378876, 0.8439283, 0.26086143, -0.4684383)
bones/285/position = Vector3(-3.8376392e-08, 0.058153287, 9.283327e-08)
bones/285/rotation = Quaternion(0.17410888, -0.10302346, 0.055573497, 0.97774434)
bones/291/rotation = Quaternion(0.2893857, -2.3956087e-08, 0.95721257, -1.5118403e-08)
bones/294/position = Vector3(2.0980582e-09, 0.05815319, 8.0767954e-08)
bones/294/rotation = Quaternion(0.17410934, -0.10302267, 0.055573504, 0.97774434)
bones/295/position = Vector3(0.0028825277, -0.006681629, 0.020434234)
bones/295/rotation = Quaternion(0.017378416, 0.8439284, 0.26086134, -0.46843806)
bones/304/position = Vector3(0.0028825349, -0.006681554, 0.02043423)
bones/304/rotation = Quaternion(0.017378839, 0.8439282, 0.26086137, -0.46843836)
bones/305/position = Vector3(0.0043317163, 0.035158828, 0.0072390214)
bones/305/rotation = Quaternion(0.033255223, -0.80594105, -0.0364276, 0.58993745)
bones/306/position = Vector3(-1.3392622e-08, 0.0569491, 1.45518975e-08)
bones/306/rotation = Quaternion(0.21637033, -0.06772724, 0.016987303, 0.97381127)
bones/307/rotation = Quaternion(0.11843964, 0.0003114607, -0.0026078643, 0.9929578)
bones/309/position = Vector3(-1.3392622e-08, 0.0569491, 1.45518975e-08)
bones/309/rotation = Quaternion(0.21637033, -0.06772724, 0.016987303, 0.97381127)
bones/310/rotation = Quaternion(0.11843964, 0.0003114607, -0.0026078643, 0.9929578)
bones/312/position = Vector3(6.378922e-09, 0.056949086, -4.540652e-08)
bones/312/rotation = Quaternion(0.21637063, -0.06772725, 0.016987415, 0.9738112)
bones/314/position = Vector3(1.5328581e-08, 0.056949124, -3.0905039e-09)
bones/314/rotation = Quaternion(0.21637197, -0.06772556, 0.016987601, 0.973811)
bones/323/position = Vector3(-1.3392622e-08, 0.0569491, 1.45518975e-08)
bones/323/rotation = Quaternion(0.21637033, -0.06772724, 0.016987303, 0.97381127)
bones/324/position = Vector3(0.007652108, 0.033861686, -0.0047473987)
bones/324/rotation = Quaternion(-0.01389689, -0.79334426, -0.017628305, 0.6083593)
bones/325/position = Vector3(1.0555568e-08, 0.058281075, -6.707066e-08)
bones/325/rotation = Quaternion(0.28022504, -0.08847966, -0.025794873, 0.9554998)
bones/326/rotation = Quaternion(0.07603329, -0.00026665317, 0.0034929842, 0.9970992)
bones/328/position = Vector3(1.0555568e-08, 0.058281075, -6.707066e-08)
bones/328/rotation = Quaternion(0.28022504, -0.08847966, -0.025794873, 0.9554998)
bones/329/rotation = Quaternion(0.07603329, -0.00026665317, 0.0034929842, 0.9970992)
bones/331/position = Vector3(-1.08564695e-08, 0.05828104, -2.3811765e-08)
bones/331/rotation = Quaternion(0.28022516, -0.0884797, -0.025794927, 0.95549977)
bones/333/position = Vector3(4.513006e-08, 0.05828105, -6.2124634e-08)
bones/333/rotation = Quaternion(0.2802262, -0.088478655, -0.025794711, 0.9554996)
bones/342/position = Vector3(1.0555568e-08, 0.058281075, -6.707066e-08)
bones/342/rotation = Quaternion(0.28022504, -0.08847966, -0.025794873, 0.9554998)
bones/343/position = Vector3(0.009504806, 0.030883214, -0.01684471)
bones/343/rotation = Quaternion(-0.039324865, -0.79694694, 0.025197105, 0.602241)
bones/344/position = Vector3(4.0937305e-08, 0.06249566, 1.7435042e-08)
bones/344/rotation = Quaternion(0.34562248, -0.055626422, -0.048975013, 0.93544227)
bones/345/rotation = Quaternion(0.045694377, -0.00018844823, 0.004117386, 0.99894696)
bones/347/position = Vector3(4.0937305e-08, 0.06249566, 1.7435042e-08)
bones/347/rotation = Quaternion(0.34562248, -0.055626422, -0.048975013, 0.93544227)
bones/348/rotation = Quaternion(0.045694377, -0.00018844823, 0.004117386, 0.99894696)
bones/350/position = Vector3(-2.8117944e-09, 0.0624956, -1.062584e-08)
bones/350/rotation = Quaternion(0.34562248, -0.055626374, -0.048975144, 0.93544227)
bones/352/position = Vector3(1.9000257e-08, 0.06249563, 2.8015819e-08)
bones/352/rotation = Quaternion(0.34562394, -0.055625122, -0.04897459, 0.93544185)
bones/361/position = Vector3(4.0937305e-08, 0.06249566, 1.7435042e-08)
bones/361/rotation = Quaternion(0.34562248, -0.055626422, -0.048975013, 0.93544227)
bones/362/position = Vector3(0.0095048, 0.030883292, -0.016844695)
bones/362/rotation = Quaternion(-0.039324857, -0.79694694, 0.025197107, 0.60224104)
bones/373/position = Vector3(-0.24141684, 0.11685232, -0.09780849)
bones/373/rotation = Quaternion(-0.02027759, -0.7694607, 0.60217166, -0.21191606)
bones/378/position = Vector3(0.24141687, 0.116852276, -0.097808555)
bones/378/rotation = Quaternion(0.038814276, -0.7811552, 0.58887655, 0.20375091)

[node name="BoneAttachment3D" parent="Pivot/sodaZachary/rig/Skeleton3D" index="5"]
transform = Transform3D(-0.91364735, -0.2997103, -0.27266744, 0.36451912, -0.90469146, -0.22325115, -0.17906637, -0.30376345, 0.93571734, -0.22276738, 0.89024, -0.13543275)

[node name="AnimationPlayer" parent="Pivot/sodaZachary" index="1"]
blend_times = [&"idleAnim", &"walk4", 0.25, &"walk4", &"idleAnim", 0.25]

[editable path="Pivot/sodaZachary"]
